[package]
name = "async-fuse"
edition = "2018"
version = "0.1.0-dev"
authors = ["Andreas Neuhaus <zargony@zargony.com>", "James Pan <jiaming.pan@gmail.com>"]
description = "Async Rust library for filesystems in userspace (FUSE)"
documentation = "https://docs.rs/fuse"
homepage = "https://github.com/jmpq/async-fuse-rs"
repository = "https://github.com/jmpq/async-fuse-rs"
readme = "README.md"
keywords = ["fuse", "filesystem", "system", "bindings", "async"]
categories = ["api-bindings", "filesystem"]
license = "MIT"

[workspace]
members = [".", "fuse-abi", "fuse-sys"]

[badges]
cirrus-ci = { repository = "jmpq/async-fuse-rs" }
github = { repository = "jmpq/async-fuse-rs" }

[dependencies]
fuse-abi = { path = "./fuse-abi", version = "=0.1.0-dev" }
fuse-sys = { path = "./fuse-sys", version = "=0.1.0-dev" }
libc = "0.2.51"
log = "0.4.6"
async-trait = "0.1.38"
tokio = { version = "1.18.0", features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
env_logger = "0.6.0"

[features]
abi-7-28 = []
default = ["abi-7-28"]
